Enable Java preview features in Gradle tasks
- Add `--enable-preview` compiler argument to `JavaCompile` tasks
- Configure `Test` and `JavaExec` tasks to support preview JVM arguments